--- a/flashCard_GUI.ui
+++ b/flashCard_GUI.ui
@@ -11,32 +11,22 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Flashcards</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListWidget" name="cardList">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>40</y>
-      <width>141</width>
-      <height>481</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QTextEdit" name="currentCard">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>20</x>
       <y>70</y>
-      <width>641</width>
-      <height>251</height>
+      <width>871</width>
+      <height>351</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>144</pointsize>
+      <pointsize>288</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -48,9 +38,9 @@
    <widget class="QPushButton" name="nextCard">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>350</y>
-      <width>181</width>
+      <x>350</x>
+      <y>470</y>
+      <width>241</width>
       <height>51</height>
      </rect>
     </property>
@@ -60,6 +50,9 @@
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(98, 171, 255);</string>
     </property>
     <property name="text">
      <string>NEXT CARD</string>
@@ -68,19 +61,19 @@
    <widget class="QListWidget" name="repeatList">
     <property name="geometry">
      <rect>
-      <x>880</x>
-      <y>40</y>
+      <x>910</x>
+      <y>70</y>
       <width>131</width>
-      <height>491</height>
+      <height>351</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="repeatCard">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>350</y>
-      <width>181</width>
+      <x>80</x>
+      <y>470</y>
+      <width>241</width>
       <height>51</height>
      </rect>
     </property>
@@ -91,6 +84,9 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(253, 135, 157);</string>
+    </property>
     <property name="text">
      <string>REPEAT CARD</string>
     </property>
@@ -98,41 +94,22 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>20</y>
+      <x>940</x>
+      <y>40</y>
       <width>91</width>
-      <height>16</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
+      <pointsize>10</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Repeat Cards</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>20</y>
-      <width>81</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Card List</string>
     </property>
    </widget>
   </widget>
