--- a/flashCard_GUI.ui
+++ b/flashCard_GUI.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
+      <y>100</y>
       <width>871</width>
       <height>351</height>
      </rect>
@@ -26,7 +26,7 @@
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>288</pointsize>
+      <pointsize>144</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -38,8 +38,8 @@
    <widget class="QPushButton" name="nextCard">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>470</y>
+      <x>320</x>
+      <y>480</y>
       <width>241</width>
       <height>51</height>
      </rect>
@@ -62,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>70</y>
+      <y>100</y>
       <width>131</width>
       <height>351</height>
      </rect>
@@ -71,8 +71,8 @@
    <widget class="QPushButton" name="repeatCard">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>470</y>
+      <x>60</x>
+      <y>480</y>
       <width>241</width>
       <height>51</height>
      </rect>
@@ -94,22 +94,48 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>40</y>
-      <width>91</width>
+      <x>930</x>
+      <y>70</y>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Arial</family>
-      <pointsize>10</pointsize>
+      <pointsize>13</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Repeat Cards</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="selectList">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>251</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(179, 179, 179)</string>
+    </property>
+    <property name="text">
+     <string>Select Card List</string>
     </property>
    </widget>
   </widget>
